[gd_scene load_steps=4 format=3 uid="uid://kki5xo2mmo0e"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_byqlw"]
[ext_resource type="Texture2D" uid="uid://cuo80kb721pws" path="res://Resources/enemy.png" id="1_kqko4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_irbu4"]
radius = 16.0

[node name="Enemy" type="RigidBody2D"]
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_byqlw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_kqko4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_irbu4")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
